fix kerning issues on smaller screens

--- a/style.css
+++ b/style.css
@@ -170,6 +170,10 @@ body {
   .content h1 {
     font-size: 6em;
   }
+  .oKern, .dotKern, .rKern, .eKern {
+	margin-left: 0 !important;
+	margin-right: 0 !important;
+  }
   #currentDate {
     font-size: 1.5em;
   }
@@ -177,11 +181,12 @@ body {
     font-size: 3em !important;
   }
   .dynamicText {
-    font-size: 1.3rem !important;
+    font-size: 1.5rem !important;
   }
 }
 @media screen and (max-width: 700px) {
   .two_column {
+	  text-align: center;
     width: 100%;
   }
   .content h1 {
@@ -190,8 +195,5 @@ body {
   }
   .content {
     margin-bottom: 50px;
-  }
-  .dynamicText {
-    font-size: 1.6rem;
   }
 }
